Fix sidebar overflow height and updated data recovery buttons

--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -322,13 +322,13 @@ aside {
     background-color: var(--color_3);
     color: var(--color_10);
     min-width: 100vw;
-    min-height: 100vh;
     z-index: 10000;
 }
 
 .sidebar.active {
     top: 0;
     transform: translateX(0);
+    min-height: 100vh;
 }
 
 .sidebar-items-left,
@@ -924,10 +924,16 @@ footer {
 }
 
 .recovery-info a {
-    background-color: var(--color_27);
-    border: 2px solid black;
+    background-color: white;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.5);
     border-radius: 25px;
+    margin-bottom: 5px;
     padding: 10px;
+}
+
+.recovery-info a:hover {
+    box-shadow: 0px 2px 15px white;
+    transform: scale(1.10);
 }
 
 .recovery-contact {
